# TextGame

./: CMakeLists.txt  README.md  creatureslib.h  main.cpp  new.cpp
src/: creatureslib.cpp  creatureslib.h  entitylib.hpp  itemlib.hpp  main.cpp  speciesenum.h
